// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-sc-t8lkk2-0 fmrKPc"
  data-testid="header-bg"
>
  <div
    class="header__Container-sc-t8lkk2-1 bEDcdp"
  >
    <p
      class="header__Link-sc-t8lkk2-3 bmPnRw"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-sc-t8lkk2-1 bEDcdp"
>
  <p
    class="header__Link-sc-t8lkk2-3 hDnhZA"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-sc-t8lkk2-0 hQpTSC"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-sc-t8lkk2-1 bEDcdp"
  >
    <div
      class="header__Group-sc-t8lkk2-4 uikQv"
    >
      <p
        class="header__Link-sc-t8lkk2-3 hDnhZA"
      >
        Series
      </p>
      <p
        class="header__Link-sc-t8lkk2-3 hDnhZA"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-sc-t8lkk2-4 uikQv"
    >
      <div
        class="header__Search-sc-t8lkk2-6 dxqUIH"
      >
        <button
          class="header__SearchIcon-sc-t8lkk2-7 hesKaM"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-sc-t8lkk2-9 jmBGNj"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-sc-t8lkk2-10 cuZNtP"
      >
        <button
          class="header__Picture-sc-t8lkk2-2 ioctSu"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-sc-t8lkk2-5 bXiYCI"
        >
          <div
            class="header__Group-sc-t8lkk2-4 uikQv"
          >
            <button
              class="header__Picture-sc-t8lkk2-2 ioctSu"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-sc-t8lkk2-3 hDnhZA"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-sc-t8lkk2-4 uikQv"
          >
            <p
              class="header__Link-sc-t8lkk2-3 hDnhZA"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-sc-t8lkk2-1 header__Feature-sc-t8lkk2-13 bEDcdp dHUCrb"
  >
    <h2
      class="header__FeatureCallOut-sc-t8lkk2-15 cQEhOs"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-sc-t8lkk2-14 cjmGcX"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-sc-t8lkk2-8 doTRDH"
    >
      Play
    </button>
  </div>
</div>
`;
